# ca_cmake_sample

./: .gitignore  CMakeLists.txt  runtest.sh
src/: CMakeLists.txt  main.cpp
src/Domain/: CMakeLists.txt
src/Domain/entity/: CMakeLists.txt  User.cpp  User.hpp
src/Domain/values/: CMakeLists.txt  IntValue.cpp  IntValue.hpp  StringValue.cpp  StringValue.hpp  ThreeOctalDigitsValue.cpp  ThreeOctalDigitsValue.hpp  TypeNameValue.cpp  TypeNameValue.hpp  ValueObject.hpp
src/application/: CMakeLists.txt
src/application/interactor/: CMakeLists.txt
src/domain/: CMakeLists.txt
src/domain/entity/: CMakeLists.txt  Entity.hpp  User.cpp  User.hpp
src/domain/value/: CMakeLists.txt  IntValue.cpp  IntValue.hpp  StringValue.cpp  StringValue.hpp  ThreeOctalDigitsValue.cpp  ThreeOctalDigitsValue.hpp  TypeNameValue.cpp  TypeNameValue.hpp  ValueObject.hpp  testobject.cpp  testobject.hpp
src/domain/values/: CMakeLists.txt  IntValue.cpp  IntValue.hpp  StringValue.cpp  StringValue.hpp  ThreeOctalDigitsValue.cpp  ThreeOctalDigitsValue.hpp  TypeNameValue.cpp  TypeNameValue.hpp  ValueObject.hpp
src/infrastructure/: CMakeLists.txt
src/interface/: CMakeLists.txt
src/registory/: CMakeLists.txt
src/utility/: CMakeLists.txt
src/utility/baseclass/: CMakeLists.txt  SingletonHelper.hpp
src/utility/logger/: CMakeLists.txt  ILogger.hpp  LoggerSpdlog.cpp  LoggerSpdlog.hpp  logging.toml
templateDir/: CMakeLists.txt
templateDir/internalTemplate/: CMakeLists.txt
test/: CMakeLists.txt
test/values/: CMakeLists.txt  unittest_entity.cpp  unittest_other.cpp  unittest_values.cpp
